--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,17 @@
-<p>big-card works!</p>
+<div class="container__big-card" xmlns="http://www.w3.org/1999/html">
+  <div class="big-card__photo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+    height="200px" alt="">
+  </div>
+  <div class="big-card__title">
+    <h1><a href="">Saiu uma nova versão do Angular</a></h1>
+  </div>
+  <div class="big-card__description">
+    <p>
+      <a>
+        Qualquer coisa escrita aqui
+      </a>
+    </p>
+  </div>
+
+</div>
