--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://linkedin.com">Linkedin</a></li>
+    <li><a href="https://github.com">Github</a></li>
+    <li><a href="https://youtube.com">Youtube</a></li>
+  </ul>
+</div>
