--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,6 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="https://linkedin.com">Linkedin</a></li>
-    <li><a href="https://github.com">Github</a></li>
-    <li><a href="https://youtube.com">Youtube</a></li>
+    <li><a href="https://www.linkedin.com/in/jonathan-william-ehmke/">Linkedin</a></li>
+    <li><a href="https://github.com/djou994/">Github</a></li>
   </ul>
 </div>
