--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png"
+      <img src="{{photoCover}}"
            height="200px" alt="">
     </div>
 
     <div class="small-card__title">
-      <h1><a href="">Algum texto aqui</a></h1>
+      <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
     </div>
   </div>
 
