--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,23 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="{{ mainPhoto }}"
+      cardTitle="{{ mainTitle }}"
+      cardDescription="{{ mainDescription }}"
+      Id="1"
+    >
+
+    </app-big-card>
   </div>
   <div class="articles__other">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <ul *ngIf="content">
+      <li *ngFor="let item of content">
+        <app-small-card
+        Id="{{item.id}}"
+        photoCover="{{item.photo}}"
+        cardTitle="{{item.title}}"></app-small-card>
+      </li>
+    </ul>
   </div>
 </div>
